--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ html {
 
 body {
    font-family: Roboto;
-   font-size: 12px;
+   font-size: 75%;
    color: #424242;
 }
 
@@ -43,29 +43,31 @@ ul {
 
 .news_more {
    float: right;
-   font-size: 16px;
+   font-size: 1em;
    color: #333;
    text-decoration: none;
 }
 
 /* header */
 .header {
-   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-   min-height: 56px;
+   box-shadow: 0 .125em .3125em rgba(0, 0, 0, 0.26);
+   min-height: 3.5em;
    transition: min-height 0.3s;
 }
 
 .header_inner {
-   width: 800px;
+   width: 80vw;
+   max-width: 800px;
    margin-left: auto;
    margin-right: auto;
 }
 
 .header_logo {
-   height: 120px;
+   width: 20%;
+   max-width: 148px;
    margin-right: 1em;
    vertical-align: top;
-   margin-top: 12px;
+   margin-top: .5em;
 }
 
 .header_title {
@@ -83,8 +85,9 @@ ul {
    display: none;
  }
 
-.nav {
-   width: 800px;
+nav {
+   width: 80vw;
+   max-width: 800px;
    margin-left: auto;
    margin-right: auto;
 }
@@ -100,38 +103,45 @@ ul {
    display: inline-block;
    width: 24%;
    text-align: center;
-   line-height: 24px;
-   padding: 24px;
+   line-height: 1.5em;
+   padding: 1.5em;
    text-transform: uppercase;
 }
 
-.nav a {
+nav a {
+   font-size: 1.5em;
    text-decoration: none;
    color: #616161;
 }
 
-.nav a:hover {
+nav a:hover {
    text-decoration: underline;
    color: #212121;
 }
 
 /* main */
 main {
-   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-   width: 800px;
+   box-shadow: 0 .1667em .4167em rgba(0, 0, 0, 0.26);
+   width: 80vw;
+   max-width: 800px;
    margin-left: auto;
    margin-right: auto;
    overflow: auto;
 }
 
+
+.content {
+   height: 25em;
+}
+
 /* large dog photo */
 .hero {
    float: left;
-   width: 480px;
+   width: 60%;
    position: relative;
    background-image: url("./images/grady.jpg");
    background-size: cover;
-   height: 300px;
+   height: 100%;
 }
 
 /* text overlay on large dog photo */
@@ -150,23 +160,24 @@ main {
 /* first area of news items, to the right of .hero */
 .top-news {
    float: right;
-   width: 320px;
-   height: 300px;
+   width: 40%;
+   height: 100%;
+   padding: 1em;
    border-bottom: 1px solid #E0E0E0;
 }
 
 .news_title {
    font-weight: 300;
    border-bottom: 1px solid #E0E0E0;
-   line-height: 24px;
-   font-size: 16px;
+   line-height: 2em;
+   font-size: 1.5em;
    padding: 1em;
 }
 
 .top-news_item {
    border-bottom: 1px solid #E0E0E0;
    padding: 1em 0;
-   line-height: 19.2px;
+   line-height: 1.2em;
 }
 
 .top-news_item:before {
@@ -189,10 +200,10 @@ main {
 
 /* table */
 .table_wrapper {
-   width: 480px;
+   width: 60%;
    float: left;
    padding-top: 1em;
-   margin-bottom: 20px;
+   margin-bottom: 1.667em;
 }
 
 .table {
@@ -209,6 +220,7 @@ main {
    color: #fff;
    font-weight: 300;
    background-color: #78909C;
+   text-align: left;
 }
 
 .table tr:nth-child(odd) td {
@@ -222,7 +234,7 @@ main {
 /* weather  */
 .weather {
    float: right;
-   width: 320px;
+   width: 40%;
    padding: 1em;
    text-align: center;
 }
@@ -300,7 +312,8 @@ main {
 footer {
    border-top: 1px solid #E0E0E0;
    padding: 1em;
-   width: 80%;
+   width: 80vw;
+   max-width: 800px;
    margin: 0 auto;
 }
 
@@ -321,10 +334,35 @@ footer a {
 
 /* tablet portrait layout (768px to 959px) */
 @media only screen and (max-width: 959px) {
+
+   .header_logo {
+      margin-right: .75em;
+      margin-top: .375em;
+   }
+   
+   .header_title {
+      font-size: 3.5em;
+      margin: .375em .1875em;
+   }
+
+   .nav_item {
+      box-sizing: border-box;
+      display: inline-block;
+      width: 24%;
+      text-align: center;
+      line-height: 1.5em;
+      padding: 1.5em;
+      text-transform: uppercase;
+   }
+
+   article h2 {
+      font-size: 1.25em;
+   }
 }
  
 /* mobile landscape layout (480px to 767px) */
 @media only screen and (max-width: 767px) {
+
 }
  
 /* mobile portrait layout (479px or less) */
