--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ html {
 
 body {
    font-family: Roboto;
-   font-size: 75%;
+   font-size: .75em;
    color: #424242;
 }
 
@@ -63,17 +63,17 @@ ul {
 }
 
 .header_logo {
-   width: 20%;
+   width: 10%;
    max-width: 148px;
    margin-right: 1em;
-   vertical-align: top;
+   vertical-align: text-bottom;
    margin-top: .5em;
 }
 
 .header_title {
    font-weight: 300;
    font-size: 4em;
-   margin: 0.5em 0.25em;
+   vertical-align: baseline;
    display: inline-block;
    color: #212121;
 }
@@ -81,11 +81,11 @@ ul {
 /* navigation */
 
 /* hide SlickNav in desktop-first design */
-.slicknav {
+#nav_mobile {
    display: none;
  }
 
-nav {
+#nav_full {
    width: 80vw;
    max-width: 800px;
    margin-left: auto;
@@ -130,9 +130,6 @@ main {
 }
 
 
-.content {
-   height: 25em;
-}
 
 /* large dog photo */
 .hero {
@@ -141,7 +138,7 @@ main {
    position: relative;
    background-image: url("./images/grady.jpg");
    background-size: cover;
-   height: 100%;
+   height: 25em;
 }
 
 /* text overlay on large dog photo */
@@ -161,7 +158,7 @@ main {
 .top-news {
    float: right;
    width: 40%;
-   height: 100%;
+   height: 25em;
    padding: 1em;
    border-bottom: 1px solid #E0E0E0;
 }
@@ -256,7 +253,9 @@ main {
 }
 
 .weather_today_image {
-   vertical-align: middle
+   vertical-align: middle;
+   width: 100%;
+   max-width: 162px;
 }
 
 .weather_today_temp {
@@ -280,22 +279,32 @@ main {
 
 .weather_next_image {
    width: 100%;
+   max-width: 64px;
 }
 
 /* news .snippets with thumbnail images */
+.recent-news {
+  clear: both;
+}
+
+
 .snippet {
    clear: both;
-   margin: 24px 0;
+   margin: 2em 0;
 }
 
 .snippet_thumbnail {
-   width: 100px;
+   width: 10%;
+   max-width: 120px;
+   min-width: 48px;
    float: left;
-   margin: .25em;
+   margin: 0 .5em;
+   vertical-align: top;
 }
 
 .snippet_title {
    font-weight: 500;
+   margin-bottom: 0;
 }
 
 .snippet_title a {
@@ -306,6 +315,11 @@ main {
 .snippet_title a:hover,
 .snippet_title a:active {
    text-decoration: underline;
+}
+
+.snippet p {
+   margin: 0;
+   padding: 0 1em;
 }
 
 /* footer */
@@ -335,11 +349,6 @@ footer a {
 /* tablet portrait layout (768px to 959px) */
 @media only screen and (max-width: 959px) {
 
-   .header_logo {
-      margin-right: .75em;
-      margin-top: .375em;
-   }
-   
    .header_title {
       font-size: 3.5em;
       margin: .375em .1875em;
@@ -358,13 +367,99 @@ footer a {
    article h2 {
       font-size: 1.25em;
    }
-}
+
+  }
  
 /* mobile landscape layout (480px to 767px) */
 @media only screen and (max-width: 767px) {
+   body {
+      width: 95%;
+      font-size: .8em;
+      margin: 0 auto;
+   }
+
+   .hero, .top-news, .recent-news, .table_wrapper, .weather {
+      float: none;
+      display: block;
+      width: 100%;
+   }
+
+   .header, main {
+      box-shadow: none;
+   }
+
+   main, footer, .header_inner {
+      width: 95vw;
+   }
+
+   .header_title {
+      font-size: 3em;
+      margin-top: 1em;
+      padding-right: .125em;
+   }
+
+
+   /* SlickNav switch & styling */
+   #nav_full {
+      display: none;
+   }
+
+   #nav_mobile {
+      display: block;
+   }
+
+   .slicknav_menu {
+      background-color: #fff !important;
+      font-size: .75em;
+      margin: 0;
+      padding: .5em;
+   }
+
+   .slicknav_menu .slicknav_menutxt {
+      color: #212121;
+      text-shadow: none;
+   }
+
+     .slicknav_btn {
+      float: left;
+      background-color: #fff;
+      color: #212121;
+      text-shadow: none;
+
+   }
+
+   .slicknav_btn .slicknav_icon {
+      background-color: #fff;
+      text-shadow: none;
+   }
+
+   
+  .slicknav_btn .slicknav_icon-bar {
+      background-color: #212121;
+      box-shadow: 0; 
+   }
+
+   .slicknav_nav .nav_list {
+      margin-left: 0;
+   }
+
+   .slicknav_nav .nav_item {
+      padding: 0.5em;
+   }
+
+   .slicknav_nav a {
+      color: #212121;
+      text-align: left;
+      font-weight: bold;
+   }
 
 }
  
 /* mobile portrait layout (479px or less) */
 @media only screen and (max-width: 479px) {
+   .header_title {
+      font-size: 2em;
+      margin-top: 1em;
+      padding-right: .125em;
+   }
 }
