fixed snippet_tumbnail margin

--- a/main.css
+++ b/main.css
@@ -298,7 +298,7 @@ main {
    max-width: 120px;
    min-width: 48px;
    float: left;
-   margin: 0 .5em;
+   margin: 0 1em;
    vertical-align: top;
 }
 
